# hedgehog

./: .clang-format  .gitignore  CMakeLists.txt  HG  LICENSE  Makefile  README.md  cactus  cactus.c  cactus.h  cactus.l  cactus.y  clear.sh  create.c  debug.h  environment.c  environment.h  error_message.h  evaluate.c  expression.c  expression.h  function.c  function.h  hedgehog  hedgehog.h  hedgehog.l  hedgehog.y  interpreter.c  interpreter.h  lex.yy.c  main.c  makefile  oop.h  readme.md  statement.c  statement.h  test.hg  test.output  test.sh  value.c  (+6 more)
.devcontainer/: Dockerfile  devcontainer.json
docs/: docs.md  types.md  vm.md
examples/: closure.hg  controls.hg  disassemble_test.hg  error_test.hg  funcs.hg  functions.hg  hegdgehog  ifs.hg  ifs_ass_test.hg  input.hg  locals.hg  loops.hg  not_allowed1.hg  not_allowed2.hg  not_allowed3.hg  not_allowed4.hg  not_allowed5.hg  sort.hg  strings.hg  test.hg  tests.hg  values.hg
parse/: hedgehog.l  hedgehog.y
src/: Makefile  README.md  ast.c  ast.h  ast_node.c  ast_node.h  chunk.c  chunk.h  common.h  compile.c  compile.h  debug.h  editor.h  environment.c  environment.h  expression.c  expression.h  format.c  function.c  function.h  gc.c  gc.h  hash.c  hash.h  hash_test.c  hashset.c  hashset.h  hedgehog.h  hedgehog.l  hedgehog.y  interpreter.c  interpreter.h  lex.l  lex.yy.c  list.c  list.h  main.c  memory.c  memory.h  object.c  (+18 more)
src/interface/: editor.c
test/: exprs.fmt.hg  exprs.hg  func1.fmt.hg  func1.hg  func2.fmt.hg  func2.hg  ifs.fmt.hg  ifs.hg  oop.fmt.hg  oop.hg  readme-test.hg  special.fmt.hg  special.hg  test.hg
(+7 files in other folders)
